# f1r3fly-block-structure

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: block.proto
src/: builder.rs  casper.rs  genesis.rs  hashing.rs  lib.rs  proto.rs  serialization.rs  storage.rs  validation.rs
src/types/: mod.rs
tests/: integration_tests.rs
tests/fixtures/: bonds.txt  wallets.txt
